# QwQEditor

./: .gitignore  CMakeLists.txt  README.md  binding.gyp  index.html  package-backup.json  package-lock.json  package.json  tailwind.config.js  vite.config.js
dist-electron/: main.js
native/extLibs/: glfw3dll.lib
native/include/OpenGL/: draw.h
native/include/env/: envInfo.h
native/include/file_operations/: fileInfo.h  file_crud.h
native/sources/: draw.cc  envInfo.cc  fileInfo.cc  fileInfo.h  main.cc
native/sources/OpenGL/: draw.cc
native/sources/env/: envInfo.cc
native/sources/file_operations/: fileInfo.cc  file_crud.cc
qwqeditor/: CMakeLists.txt  README.md  binding.gyp  tailwindO.css  test.js
qwqeditor/assets/: language.json
qwqeditor/main/: main.js  mymodule.cpp
qwqeditor/main/cppInter/: triangle.cpp
qwqeditor/pdfjs/web/: viewer.html
qwqeditor/preload/: preload.js
qwqeditor/renderer/: index.html  main.js  module.js  ojbRender.js
qwqeditor/renderer/IndexJs/: PDFRender.js  PageSwitch.js  Renderer.js  SwitchPage.js  TabManager.js
qwqeditor/renderer/css/: IndexStyle-backup.css  IndexStyle.css  PDF.css  home.css
qwqeditor/renderer/subIndex/: about.html  contact.html  home.html  pdfReader.html  service.html
qwqeditor/src/: index.html  main.js  preload.js
src/: App.vue  i18n.js  indexedDB.js  main.js  style.css
src-electron/: main.js  preload.js
src-electron/cppAddons/: cppInfo.node  file_tree.node  file_tree_asyncv1.node  file_tree_threads.node  file_tree_threadsv1.node  file_treev1.node  myaddon.node
src-electron/cppSources/: README.md  cppInfo.cpp  file_tree.cpp  file_tree_asyncv1.cpp  file_tree_threadsv1.cpp  myaddon.cpp
src/assets/: language.json
src/assets/styles/: Library.css  StatusBar.css
src/components/: FileTree.vue  FileTreeNode.vue  InputDialog.vue  NavigationBar.vue  NoteBook.vue  SideBar.vue  StatusBar.vue  TitleBar.vue
src/pages/: DashBoard.vue  Home.vue  Library.vue  OpenGL.vue  Service.vue  WebGL_test.vue  _EmptyTest.vue  pdfReader.vue
src/plugins/: vuetify.js
src/router/: index.js  router.js
src/store/: index.js
